syntax = "proto3";

import "google/protobuf/timestamp.proto";

message TaskPB {
  string name = 1;
  google.protobuf.Timestamp startDate = 2;
  google.protobuf.Timestamp endDate = 3;
  bool done = 4;
}